--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 fastapi = {extras = ["all"], version = "^0.104.1"}
 typer = {extras = ["all"], version = "^0.9.0"}
 rich = "^13.7.0"
+boltons = "^23.1.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
