--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ boltons = "^23.1.1"
 black = "^23.11.0"
 pytest = "^7.4.3"
 pre-commit = "^3.5.0"
+ipykernel = "^6.26.0"
+pandas = "^2.1.3"
+jupyterhub = "^4.0.2"
+ipython = "^8.18.0"
 
 [build-system]
 requires = ["poetry-core"]
