test: add pytest config, coverage, and initial test suite

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,13 @@ ipykernel = "^6.26.0"
 pandas = "^2.1.3"
 jupyterhub = "^4.0.2"
 ipython = "^8.18.0"
+pytest-cov = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+addopts = "--cov=main --cov-report=term-missing"
