--- a/mise.toml
+++ b/mise.toml
@@ -7,3 +7,16 @@ _.python.venv = { path = ".venv", create = true }
 [tasks]
 test = "poetry run pytest"
 run = "poetry run uvicorn main:app --reload"
+"deploy:docker-local" = "docker compose up --build"
+
+[tasks."smoke-test"]
+run = """
+  touch yes.log.csv
+  docker compose up -d --build
+  sleep 3
+  FAIL=0
+  curl -sf http://localhost:8000/ | grep -q 'OK' || FAIL=1
+  curl -sf http://localhost:8000/hello | grep -q 'OK' || FAIL=1
+  docker compose down
+  [ $FAIL -eq 0 ] && echo 'Smoke test passed' || (echo 'Smoke test FAILED'; exit 1)
+"""
